--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,9 +4,19 @@
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
   <div class="collapse navbar-collapse w-100 d-flex col justify-content-between" id="navbarSupportedContent">
     <ul class="navbar-nav">
+
+    <% if current_user.user_type == 'student' %>
+      <li class="nav-item active">
+        <a class="nav-link" href="/user/<%=current_user.id%>/posts">Join Class <span class="sr-only">(current)</span></a>
+      </li>
+    <% end %>
+    <% if current_user.user_type == 'teacher' %>
+      <li class="nav-item active">
+        <a class="nav-link" href="/classrooms/new">Create Class <span class="sr-only">(current)</span></a>
+      </li>
+
       <li class="nav-item active">
         <a class="nav-link" href="/user/<%=current_user.id%>/posts">My Posts <span class="sr-only">(current)</span></a>
       </li>
@@ -28,6 +38,7 @@
       <a class="nav-link" href="/posts/new">Create Post</a>
       </li>
     </ul>
+    <% end %>
    <ul class="navbar-nav">
       <li class="nav-item">
         <a class="nav-link" href="#">Welcome: <%= current_user.email%></a>
