--- a/app/assets/stylesheets/classrooms.scss
+++ b/app/assets/stylesheets/classrooms.scss
@@ -65,3 +65,15 @@
 .news-child-div{
     min-height: 150px;
 }
+
+.announcement_hide{
+    display: none;
+}
+
+// .classwork_hide{
+//     display: none;
+// }
+
+.people_hide{
+    display: none;
+}
