--- a/app/views/classrooms/_form.html.erb
+++ b/app/views/classrooms/_form.html.erb
@@ -20,7 +20,7 @@
 
       <div class="field mt-4">
         <span class="label_text"> <%= form.label :description %> </span> <br />
-        <%= form.text_area :description, :size=>"50", placeholder: "Enter Description"%>
+        <%= form.text_area :description, required: true, :size=>"50", placeholder: "Enter Description"%>
       </div>
 
       <div class="image-preview">
