--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
-<div class="d-flex bg-light w-100 justify-content-around">
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<div class="d-flex bg-dark w-100 flex-row justify-between ">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="/">Dashboard</a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -9,9 +9,14 @@
 
     <% if current_user.user_type == 'student' %>
       <li class="nav-item active">
-        <a class="nav-link" href="/user/<%=current_user.id%>/posts">Join Class <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/join_class">Join Class <span class="sr-only">(current)</span></a>
       </li>
     <% end %>
+
+    <li class="nav-item active">
+      <a class="nav-link" href="/posts">Posts<span class="sr-only">(current)</span></a>
+    </li>
+
     <% if current_user.user_type == 'teacher' %>
       <li class="nav-item active">
         <a class="nav-link" href="/classrooms/new">Create Class <span class="sr-only">(current)</span></a>
@@ -20,45 +25,55 @@
       <li class="nav-item active">
         <a class="nav-link" href="/user/<%=current_user.id%>/posts">My Posts <span class="sr-only">(current)</span></a>
       </li>
+
       <li class="nav-item">
         <a class="nav-link" href="/user/<%=current_user.id%>/suggestions">My Suggestions</a>
       </li>
 
       <%if current_user.role == 'admin'%>
         <li class="nav-item">
-            <a class="nav-link" href="/admin">Admin Dashboard</a>
+          <a class="nav-link" href="/admin">Admin Dashboard</a>
         </li>
       <% end %>
+
       <%if current_user.role == 'moderator'%>
         <li class="nav-item">
-            <a class="nav-link" href="/moderator">Moderator Dashboard</a>
+          <a class="nav-link" href="/moderator">Moderator Dashboard</a>
         </li>
       <% end %>
-      <li class="nav-item">
-      <a class="nav-link" href="/posts/new">Create Post</a>
-      </li>
+
+      <% if current_user.user_type == 'teacher' %>
+        <li class="nav-item">
+          <a class="nav-link" href="/posts/new">Create Post</a>
+        </li>
+      <%end%>
+
     </ul>
     <% end %>
-   <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="#">Welcome: <%= current_user.email%></a>
-      </li>
-      <li class="nav-item">
-        <%= link_to 'Edit profile', edit_user_registration_path, :class => 'nav-link' %>
-      </li>
-      <% if user_signed_in? %>
-      <li class="nav-item">
-        <%= link_to "Log out", destroy_user_session_path, method: :delete, class:"nav-link"%>
-      </li>
-      <% else %>
-      <li class="nav-item">
-        <%= link_to "Login", new_user_session_path, class:"nav-link"%>
-      </li>
-      <li class="nav-item">
-        <%= link_to "Signup", new_user_registration_path, class:"nav-link"%>
-      </li>
-      <% end %>
-   </ul>
+  
+  </div>
+
+  <div class="collapse navbar-collapse w-100 d-flex col justify-content-between" id="navbarSupportedContent ">
+  <ul class="navbar-nav">
+  <li class="nav-item">
+    <a class="nav-link" href="#">Welcome: <%= current_user.email%></a>
+  </li>
+  <li class="nav-item">
+    <%= link_to 'Edit profile', edit_user_registration_path, :class => 'nav-link' %>
+  </li>
+  <% if user_signed_in? %>
+  <li class="nav-item">
+    <%= link_to "Log out", destroy_user_session_path, method: :delete, class:"nav-link"%>
+  </li>
+  <% else %>
+  <li class="nav-item">
+    <%= link_to "Login", new_user_session_path, class:"nav-link"%>
+  </li>
+  <li class="nav-item">
+    <%= link_to "Signup", new_user_registration_path, class:"nav-link"%>
+  </li>
+  <% end %>
+</ul>
   </div>
 </nav>
 </div>
