--- a/app/views/classworks/_classwork.html.erb
+++ b/app/views/classworks/_classwork.html.erb
@@ -1,13 +1,14 @@
 <div class='d-flex flex-column w-100'>
   <p class="d"><%= classwork.body %></p>
   <% if classwork.work_type == 'assignment' %>
-    <%= form_for('/submission', remote: true) do |form|%>
-        <span class="label_text"> 
-        <%= form.label "Profile Picture" %> </span> <br />
-          <%= form.file_field :solution, class:"file" %>
-          <div class="actions">
-            <%= form.submit %>
-          </div>
-    <% end -%>
+
+  <%= form_with model: [@classroom, @classroom.submissions.build ] do |form| %>
+    <p>
+    <%= form.file_field :solution, class:"file" %>
+    </p>
+        <input type="hidden" name="submission[classwork_id]" value="<%= classwork.id %>"/>
+        <input type="hidden" name="submission[classroom_id]" value="<%= @classroom.id %>"/>
+        <%= form.submit "Create" %>  
+        <% end %>
   <% end %>
 </div>
