--- a/app/views/submissions/_submission.html.erb
+++ b/app/views/submissions/_submission.html.erb
@@ -1,3 +1,3 @@
 <%if submission.solution.attached?%>
-  <iframe class="classroom_avatar" src="<%= (url_for(submission.solution)) %>" />
+  <iframe src="<%= (url_for(submission.solution)) %>" />
 <%end%>
