--- a/app/views/submissions/index.html.erb
+++ b/app/views/submissions/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Submissions</h1>
+<h3>Assignments</h3>
 
 <table>
   <thead>
@@ -10,16 +10,14 @@
   </thead>
 
   <tbody>
-    <% @submissions.each do |submission| %>
-      <tr>
-        <td><%= link_to 'Show', submission %></td>
-        <td><%= link_to 'Edit', edit_submission_path(submission) %></td>
-        <td><%= link_to 'Destroy', submission, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
+  <% @submissions.each do |submission| %>
+    <div class='d-flex flex-row'>
+      <span class='nav-link btn' role='button'>Download<span>
+      <iframe src="<%= (url_for(submission.solution)) %>" />
+    </div>
+  <% end %>
   </tbody>
 </table>
 
 <br>
 
-<%= link_to 'New Submission', new_submission_path %>
