--- a/app/views/suggestions/index.html.erb
+++ b/app/views/suggestions/index.html.erb
@@ -1,13 +1,14 @@
+<div class="container">
 <h1>Suggestions</h1>
+
 <%if !@suggestion.nil?%>
   <% @suggestion.each do |sugg| %>
 <div id="news" class="container-fluid mb-3">
   <div class="news-main-div row justify-content-center padding">
-    <div class="card m-3">
-      <div class="news-child-div col-sx-12 col-sm-6 col-md-4 row">
+    <div class="card padding column justify-content-center pt-3">
+      <div >
         <div>
-        <a href="/posts/<%=sugg.post_id%>">Show post</a>
-          <p class="row ml-2"><%= truncate(sugg.body.to_s, length: 100)%></p>
+          <p ><%= truncate(sugg.body.to_s, length: 100)%><br><br><a class= "btn btn-sm btn-outline-primary padding-left: 2.5em; padding-right: 2.5rem;" href="/posts/<%=sugg.post_id%>">Show post</a></p>
         </div>
       </div>
     </div>
@@ -16,3 +17,4 @@
     <% end %>
 <%end%>
 <br>
+</div>
