--- a/app/views/announcements/_announcement.html.erb
+++ b/app/views/announcements/_announcement.html.erb
@@ -1,22 +1,26 @@
 <div class='d-flex flex-column w-100'>
-  <p class="d"><%= announcement.body %></p>
+  <p class="d"><%= announcement.body %> by <%= announcement.user.name%></p>
 
   <div class='float-right'>
     <a class="reply-btn" href="#">Reply</a>
+
     <div class="child-announcements">
       <%= render partial: 'announcements/child', locals: {classroom: announcement.classroom, parent: announcement} %>
     </div>
+
     <% if current_user.id == announcement.user_id%>
       <%= link_to 'Edit', edit_classroom_announcement_path(@classroom, announcement)%>
     <%end%>
 
     <a href='#' class='view-btn'>Replies</a>
   </div>
+
   <div class="child">
     <%= render announcement.announcements%>
   </div>
-</div>
 
+</div>
+<hr />
 
 <script>
   
