--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -8,9 +8,13 @@
   <li class="nav-item">
     <span class="nav-link people" role="button">People</span>
   </li>
-  <li class="nav-item">
-    <a class="nav-link" role="button" href='/classrooms/<%=@classroom.id%>/assignments'>Assignment Submissions</a>
-  </li>
+
+  <% if @classroom.user_id == current_user.id %>
+    <li class="nav-item">
+      <a class="nav-link" role="button" href='/classrooms/<%=@classroom.id%>/assignments'>Assignment Submissions</a>
+    </li>
+  <% end %>
+
 </ul>
 
 
@@ -49,18 +53,19 @@
   <div class='announcement_hide'>
     <h4>Start Discussion:</h4>
     <div><%= render partial: 'announcements/form', locals: {classroom: @classroom, parent: nil}%></div>
-      <div class="w-25">
+      <div class="w-100">
         <h4 class="mt-5">Class Discussion</h4>
         <%= render @classroom.announcements.announcement_replies %>
       </div>
   </div>
 
+<% if @classroom.user_id == current_user.id %>
   <div class='classwork_hide'>
-    <h4>Add Classwork:</h4>
     <div><%= render partial: 'classworks/form', locals: {classroom: @classroom, parent: nil}%></div>
+<%end%>
 
-    <div class="w-25">
-      <h4 class="mt-5">Add classwork</h4>
+    <div class="w-100">
+      <h4 class="mt-5"></h4>
       <%= render @classroom.classworks %>
       </div>
   </div>
