--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,9 +1,3 @@
 <%= form_with model: [post, post.comments.build ] do |form| %>
-    <p>
-        <%= form.label :body %><br>
-        <%= form.rich_text_area :body,  required: true%>
-    </p>
-    <p>
-        <%= form.submit %>
-    </p>
-<% end %>
+    <p>Add a comment: <%= form.text_field :body, required: true %> <%= form.submit "post", :class => "btn btn-sm btn-outline-primary mb-2 mt-1 "%></p>
+  <% end %>
