--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,34 @@
-<h2>Forgot your password?</h2>
+<section class="vh-100">
+  <div class="container-fluid h-custom">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-md-9 col-lg-6 col-xl-5">
+        <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp"
+          class="img-fluid" alt="Sample image">
+      </div>
+      <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
+        <h2>Forgot your password?</h2>
+        <br>
+        <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
+        <form>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+          <div class="divider d-flex align-items-center my-8">
+          </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+          <!-- Email input -->
+          <div class="form-outline mb-8">
+            <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", id: "inputEmail" %>
+            <label class="form-label" for="form3Example3"><%= f.label :email %></label>
+          </div>
+
+          <div class="text-center text-lg-start mt-8 pt-2">
+            <%= f.submit "Send me reset password link", :class => "btn btn-primary padding-left: 2.5em; padding-right: 2.5rem;" %>
+            <p class="small fw-bold mt-8 pt-1 mb-0"><%= render "devise/shared/links" %></p>
+          </div>
+
+        </form>
+        <% end %>
+      </div>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</section>
