--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,35 +1,62 @@
-<h2>Sign up</h2>
+<section class="vh-100">
+  <div class="container-fluid h-custom">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-md-9 col-lg-6 col-xl-5">
+        <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp"
+          class="img-fluid" alt="Sample image">
+      </div>
+      <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+        <h2>Sign up</h2>
+        <br>
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, required: true, autocomplete: "email" %>
+        <form class="form-signin">
+
+        <div class="form-outline mb-8">
+          <%= f.label :name %><br />
+          <%= f.text_field :name, autofocus: true, placeholder: "Enter Name", required: true, class: "form-control", autocomplete: "name" %>
+        </div>
+        
+          <!-- Email input -->
+          <div class="form-outline mb-8">
+            <%= f.email_field :email,required: true, autofocus: true, autocomplete: "email", class: "form-control", id: "inputEmail"%>
+            <label class="form-label" for="form3Example3">Email address</label>
+          </div>
+
+
+          <!-- Password input -->
+
+          <div class="field form-outline mb-8">
+            <%= f.password_field :password, autocomplete: "new-password", class: "form-control", id: "inputPassword" %>
+            <label class="form-label" for="form3Example4"><%= f.label :password %>
+            <% if @minimum_password_length %>
+            <em>(<%= @minimum_password_length %> characters minimum)</em>
+            <% end %></label>
+          </div>
+
+          <div class="field form-outline mb-8">
+            <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control", id: "inputPassword"  %>
+            <label class="form-label" for="form3Example4"><%= f.label :password_confirmation %></label>
+          </div>
+
+          <div class="d-flex justify-content-between align-items-center">
+          </div>
+
+          <div class="text-center text-lg-start mt-8 pt-2">
+            <%= f.submit "Sign up", :class => "btn btn-primary padding-left: 2.5em; padding-right: 2.5rem;" %>
+            <p class="small fw-bold mt-8 pt-1 mb-0"><%= render "devise/shared/links" %></p>
+          </div>
+
+        </form>
+        <% end %>
+      </div>
+    </div>
   </div>
+</section>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, required: true, autocomplete: "new-password" %>
-  </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
 
-  <div class="field">
-    <b>Role</b><br />
-    <%= f.radio_button :user_type, "teacher" %> Teacher<br />
-    <%= f.radio_button :user_type, "student" %> Student<br />
-  </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
 
-<%= render "devise/shared/links" %>
+
