--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', post: @post %>
 
-<%= link_to 'Show', @post %> |
-<%= link_to 'Back', posts_path %>
+<%= link_to 'Show', @post, :class => "btn btn-sm btn-outline-primary padding-left: 2.5em; padding-right: 2.5rem; mt-2" %>
+<%= link_to 'Back', posts_path, :class => "btn btn-sm btn-outline-primary padding-left: 2.5em; padding-right: 2.5rem; mt-2"%>
