--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', post: @post %>
 
-<%= link_to 'Back', posts_path %>
+<%= link_to 'Back', posts_path, :class => "btn btn-sm btn-outline-primary padding-left: 2.5em; padding-right: 2.5rem;"  %>
