--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,3 @@
-<button class="mb-3"><%= link_to 'Back', posts_path %></button>
-
 <%if current_user.role == 'moderator'%>
   <% if @post.status == 'inactive'%>
     <button><a href="/status/<%=@post.id%>">Publish</a></button>
@@ -9,28 +7,50 @@
   <button><%= link_to "Destroy", @post, method: :delete, data: { confirm: 'Are you sure?' }%> </button>
 <% end %>
 
+<%= link_to 'Back', posts_path, :class => "btn btn-sm btn-outline-primary mb-2" %>
 
-<div class="w-100 row">
-  <div class="card w-50">
-    <h3><%= @post.title %></h3>
-    <p><%= @post.body %></p>
-    <%= render partial: 'likes/like', locals: {likeable: @post} %>
-    <%= render partial: 'reports/report', locals: {reportable: @post} %>
-    
+<div class=" news-main-div row justify-content-center">
+
+  <div class="card w-50 ">
+
+
+    <div class="news-main-div row justify-content-center padding ">
+      <div class="">
+        <div class="m-3 news-child-div shadow p-3 mb-5 bg-white rounded">
+          <div>
+            <p class="ml-2"></p>
+            <h2 class="mt-6 w-100 row justify-content-center"><%= @post.title%></h2>
+            <small class="mt-0 text-muted row justify-content-center"><%= @post.status%></small>
+            <hr class="m-5"/>
+            <h8 class="row justify-content-center m-2"><%= @post.body%></h8>
+            <hr class="m-5"/>
+            <div class="d-flex flex-row justify-content-center">
+              <p class="d-flex flex-row justify-content-center"> <%= render partial: 'likes/like', locals: {likeable: @post}%> <%= render partial: 'reports/report', locals: {reportable: @post} %></p>
+          </div>
+        </div>
+      </div>
+     </div>
+    </div>
+
+
+
+    <h5 class="m-2">Comments</h5>
+    <div class="card mt-2">
+
+    <div class="m-2"><%= render @post.comments.replies, :class => "card" %></div>
+    </div>
+    <br>
+    <%= render partial: 'comments/form', locals: {post: @post, parent: nil}%>
+
+
   </div>
+
+
   <div class="card w-50">
-    <h4>Suggestions</h4>
-    <%= render @post.suggestions.post_suggestions %>
-    <h4>Add new suggestion</h4>
-    <%= render partial: 'suggestions/child', locals: {post: @post, parent: nil}%>
+    <h5 class="m-2">Suggestions</h5>
+    <div class="card mt-2">
+    <div class="m-2"><%= render @post.suggestions.post_suggestions, :class => "card"%></div>
+    </div>
+    <div class="m-2"><%= render partial: 'suggestions/child', locals: {post: @post, parent: nil}%></div>
   </div>
 </div>
-
-
-<div class="w-25">
-  <h4 class="mt-5">Comments</h4>
-  <%= render @post.comments.replies %>
-</div>
-
-<h4>Add a comment:</h4>
-<%= render partial: 'comments/form', locals: {post: @post, parent: nil}%>
