--- a/app/views/suggestions/edit.html.erb
+++ b/app/views/suggestions/edit.html.erb
@@ -1,12 +1,10 @@
-<h1> Edit suggestion</h1>
+<h1> Edit suggestion </h1>
 <%= form_for([@post, @suggestion]) do |f| %>
   <div class="field">
-    <%= f.label :body %><br />
-    <%= f.text_area :body, required: true %>
+    <%= f.label :body %>
+    <%= f.text_field :body, required: true %><br>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="actions mt-2">
+    <%= f.submit "Update", :class => "btn btn-sm btn-outline-primary padding-left: 2.5em; padding-right: 2.5rem;" %> <%= link_to 'Back', posts_path, :class => "btn btn-sm btn-outline-primary padding-left: 2.5em; padding-right: 2.5rem;" %>
   </div>
 <% end %>
-
-<%= link_to 'Back', posts_path %>
