--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,12 +8,32 @@
 
   <div class="collapse navbar-collapse w-100 d-flex col justify-content-between" id="navbarSupportedContent">
     <ul class="navbar-nav">
+
+    <%if current_user.user_type == 'teacher'%>
+      <li class="nav-item">
+        <a class="nav-link" href="/classrooms/new">Create Classroom</a>
+      </li>
+    <%end%>
+
+    <%if current_user.user_type == 'student'%>
+      <li class="nav-item">
+        <a class="nav-link" href="/join_class">Join Classroom</a>
+      </li>
+    <%end%>
+
+    <li class="nav-item active">
+        <a class="nav-link" href="/posts">Posts <span class="sr-only"></span></a>
+      </li>
+
       <li class="nav-item active">
         <a class="nav-link" href="/user/<%=current_user.id%>/posts">My Posts <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/user/<%=current_user.id%>/suggestions">My Suggestions</a>
-      </li>
+
+      <% if current_user.user_type == 'teacher'%>
+        <li class="nav-item">
+          <a class="nav-link" href="/user/<%=current_user.id%>/suggestions">My Suggestions</a>
+        </li>
+      <% end %>
 
       <%if current_user.role == 'admin'%>
         <li class="nav-item">
