--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -34,8 +34,10 @@
             </div>
           </div>
           <h6 class="classroom_description"><%= @classroom.description%></h6>
+          <% if current_user.id == @classroom.user_id%>
           <h6 class="classroom_description">Code: <%= @classroom.class_code%></h6>
-            <%= button_to "Edit", edit_classroom_path(@classroom), :class => "classroom_read_button", :method => :get%>
+          <%= button_to "Edit", edit_classroom_path(@classroom), :class => "classroom_read_button", :method => :get%>
+<%end%>
           <div class="col">
           <% if current_user.id == @classroom.user_id%>
               <%= link_to "Edit", edit_classroom_path(@classroom)%>
@@ -47,9 +49,6 @@
     </div>
   </div>
 
-  <%= link_to 'Edit', edit_classroom_path(@classroom) %> |
-  <%= link_to 'Back', classrooms_path %>
-
   <div class='announcement_hide'>
     <h4>Start Discussion:</h4>
     <div><%= render partial: 'announcements/form', locals: {classroom: @classroom, parent: nil}%></div>
@@ -59,10 +58,10 @@
       </div>
   </div>
 
-<% if @classroom.user_id == current_user.id %>
   <div class='classwork_hide'>
-    <div><%= render partial: 'classworks/form', locals: {classroom: @classroom, parent: nil}%></div>
-<%end%>
+    <% if @classroom.user_id == current_user.id %>
+      <div><%= render partial: 'classworks/form', locals: {classroom: @classroom, parent: nil}%></div>
+    <%end%>
 
     <div class="w-100">
       <h4 class="mt-5"></h4>
@@ -83,26 +82,26 @@
 
 <script>
 
-  $(".classwork").on("click",function(e){
+  $('.classwork').on('click',function(e){
     e.preventDefault()
-    $(".announcement_hide").hide();
-    $(".people_hide").hide();
-    $(".classwork_hide").show();
+    $('.announcement_hide').hide();
+    $('.people_hide').hide();
+    $('.classwork_hide').show();
 
   });
 
-  $(".people").on("click",function(e){
+  $('.people').on('click',function(e){
     e.preventDefault()
-    $(".announcement_hide").hide();
-    $(".classwork_hide").hide();
-    $(".people_hide").show();
+    $('.announcement_hide').hide();
+    $('.classwork_hide').hide();
+    $('.people_hide').show();
   });
 
-  $(".discussion").on("click",function(e){
+  $('.discussion').on('click',function(e){
     e.preventDefault()
-    $(".people_hide").hide();
-    $(".classwork_hide").hide();
-    $(".announcement_hide").show();
+    $('.people_hide').hide();
+    $('.classwork_hide').hide();
+    $('.announcement_hide').show();
     
   });
 
