--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -15,10 +15,23 @@
 <br><br>
 
 <div class="d-flex flex-row">
-  <p class="d-flex flex-row justify-content-center"><span class='ml-2'><%= render partial: 'likes/like', locals: {likeable: @post}%></span> <span class='ml-2'> <%= render partial: 'reports/report', locals: {reportable: @post} %></span></p>
+  <p class="d-flex flex-row justify-content-center"><span class='ml-2'><%= render partial: 'likes/like', locals: {likeable: comment}%></span> <span class='ml-2'> <%= render partial: 'reports/report', locals: {reportable: comment} %></span></p>
 </div>
 
-<hr/>
+<a class='view-btn' href='#'>Replies</a>
 <div class="child">
-  <%= render comment.comments%>
+<%= render comment.comments%>
 </div>
+<hr/>
+
+<script>
+
+  document.querySelectorAll('.view-btn').forEach((el)=>{
+    el.addEventListener('click', (ev) =>{
+      console.log("sdfds")
+      ev.preventDefault();
+      el.nextElementSibling.style ='display: block;'
+    })
+})
+
+</script>
